--- a/index.html
+++ b/index.html
@@ -1,12 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
-    <p>rfrfrfr</p>
-    <h1>frf</h1>
+    <!--Start Navbar-->
+    <div class="topnav1">
+        <a href="about.html">About us</a>
+        <a href="contact.html">Contact Us</a>
+    </div>
+    <!--End Navbar-->
+
+    <!--Start Container-->
+    <div class="top-container">
+        <img src="images/img_avatar.png" alt="alt-img" class="top-cloud" />
+        <h1>Iam Ahmed</h1>
+        <p class="second-heading">-- A Programmer -- </p>
+        <h2>Hello.</h2>
+        <p class="bio">Myself Ahmed Mostafa. Iam a full stack developer for 5 years </p>
+        <p class="bio1">Iam Currently in a full time job with company and i make alot of full stack projects in my
+            company</p>
+    </div>
+    <!--End Container-->
+
+    <!-- Start middle-container-->
+    <div class="middle-container">
+         <!-- Start Skills-->
+        <div class="skills">
+            <h2>***My Skills***</h2>
+            <!-- Start Skiil 1 -->
+            <div class="skill-row1">
+                <img src="images/images.png" alt="web icon" class="web_dev">
+                <h3>A javascript wondrfull</h3>
+                <p class="bio2">I have Experince In coding with javascript , css , html , bootstrap</p>
+            </div>
+             <!-- End Skiil 1 -->
+
+              <!-- Start Skiil 2 -->
+            <div class="skill-row2">
+                <img src="images/download.png" alt="open source" class="open-source">
+                <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. .</h3>
+                <p class="bio3">Lorem, ipsum dolor sit amet consectetur</p>
+                <p class="bio4">It's FUN!!</p>
+
+            </div>
+             <!-- End Skiil 2 -->
+        </div>
+        <!-- End Skills-->
+      <hr>
+        <!-- Start Contact Me-->
+       <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam libero sed odit dicta velit porro vero fugiat labore esse excepturi, qui explicabo itaque nobis tempore quod, molestiae enim pariatur quas.</h3>
+        <p class="contact-section">We Are Learn Together</p>
+        <p class="contact">You Can Contact Me Of The mentioned site , i will be waiting for you</p>
+        <a class="btn" href="mailto:ahmed@gmail.com">Contact Me</a>
+       </div>
+        <!-- End Contact Me-->
+    </div>
+    <!-- End middle-container-->
+
 </body>
+
 </html>
