--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
     <!--Start Container-->
     <div class="top-container">
-        <img src="images/img_avatar.png" alt="alt-img" class="top-cloud" />
-        <h1>Iam Ahmed</h1>
+        <img src="images/images (1).png" alt="alt-img" class="top-cloud" />
+        <h1>Iam Pogrammer</h1>
         <p class="second-heading">-- A Programmer -- </p>
         <h2>Hello.</h2>
-        <p class="bio">Myself Ahmed Mostafa. Iam a full stack developer for 5 years </p>
+        <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores nemo molestiae facere architecto,  </p>
         <p class="bio1">Iam Currently in a full time job with company and i make alot of full stack projects in my
             company</p>
     </div>
